--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -1,4 +1,3 @@
-# <!-- Managed automatically by PreTeXt authoring tools -->
 # (delete the above line to manage this file manually)
 
 name: PreTeXt-CLI Actions
@@ -25,7 +24,13 @@ jobs:
               run: pip install -r requirements.txt
 
             - name: build deploy targets
-              run: pretext build --deploys
+              run: |
+                version="$(cut -d '.' -f 1,2 <<< "$(pretext --version)")" 
+                if [ "$version" -lt "2.5" ]; then
+                    pretext build
+                else
+                    pretext build --deploys
+                fi
             - name: stage deployment
               run: pretext deploy --stage-only
 
