--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -25,10 +25,13 @@ jobs:
 
             - name: build deploy targets
               run: |
-                version="$(cut -d '.' -f 1,2 <<< "$(pretext --version)")" 
+                version="$(pretext --version | cut -d '.' -f 1,2)"
+                echo $version 
                 if [ "$version" -lt "2.5" ]; then
+                    echo "PreTeXt version is less than 2.5, using old build command"
                     pretext build
                 else
+                    echo "PreTeXt version is 2.5 or greater, using new build command"
                     pretext build --deploys
                 fi
             - name: stage deployment
