--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -26,13 +26,13 @@ jobs:
             - name: build deploy targets
               run: |
                 version="$(pretext --version | cut -d '.' -f 1,2)"
-                echo "version is $version" 
-                if ${{ [[ $version -lt 2.5 ]] }}
+                echo $version
+                if ${{ [[ $version < 2.5 ]] }}
                 then
                     echo "PreTeXt version is less than 2.5, using old build command"
                     pretext build
                 else
-                    echo "PreTeXt version is $version, which is 2.5 or greater; using new build command"
+                    echo "PreTeXt version is 2.5 or greater; using new build command"
                     pretext build --deploys
                 fi
             - name: stage deployment
