I think this is it

--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -27,7 +27,7 @@ jobs:
               run: |
                 version="$(pretext --version | cut -d '.' -f 1,2)"
                 echo $version
-                if [[ $version < 2.5 ]]; then
+                if [[ "$version" < "2.5" ]]; then
                     echo "PreTeXt version is less than 2.5, using old build command"
                     pretext build
                 else
