--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -31,8 +31,7 @@ jobs:
                 version="$(pretext --version | cut -d '.' -f 1,2)"
                 echo "PreTeXt Version:"
                 echo $version
-                echo "now testing version"
-                if [ "$version" -lt "2.5" ]; then
+                if [ "$version" -lt 2.5 ]; then
                     echo "PreTeXt version is less than 2.5, using old build command"
                     pretext build
                 else
