--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -29,9 +29,10 @@ jobs:
             - name: build deploy targets
               run: |
                 version="$(pretext --version | cut -d '.' -f 1,2)"
+                minversion="2.5"
                 echo "PreTeXt Version:"
                 echo $version
-                if [ "$version" -lt 2.5 ]; then
+                if [ "$version" -lt "$minversion" ]; then
                     echo "PreTeXt version is less than 2.5, using old build command"
                     pretext build
                 else
