--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -27,7 +27,8 @@
   },
 
   // Respect the project's designated dependencies
-  "postCreateCommand": "pip install -r requirements.txt",
+  // "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "./.github/scripts/add-sage.sh",
 
   // Port forwarding
   // ---------------
