--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -15,9 +15,9 @@
   "name": "PreTeXt-Codespaces",
 
   // This Docker image includes some LaTeX support, but is still not to large.  Note that if you keep your codespace running, it will use up your GitHub free storage quota.  Additional options are listed below.
-  "image": "oscarlevin/pretext:small",
+  // "image": "oscarlevin/pretext:small",
   // If you need to generate more complicated assets (such as sageplots) or use additional fonts when building to PDF, comment out the above line and uncomment the following line.
-  // "image": "oscarlevin/pretext:full",
+  "image": "oscarlevin/pretext:full",
   // If you only intend to build for web and don't have any latex-image generated assets, you can use a smaller image:
   // "image": "oscarlevin/pretext:lite",
 
@@ -27,9 +27,10 @@
   },
 
   // Respect the project's designated dependencies
-  // "postCreateCommand": "pip install -r requirements.txt",
-  "postCreateCommand": "./.github/scripts/add-sage.sh",
+  "postCreateCommand": "pip install -r requirements.txt",
+  // "postCreateCommand": "bash ./.github/scripts/add-sage.sh",
 
+  
   // Port forwarding
   // ---------------
   // This is needed by the CodeChat Server.
