--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: install deps
-        run: pip install -r requirements.txt
+        run: pip install -r requirements.txt --break-system-packages
 
       - name: install local ptx files
         run: pretext --version
