--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: setup git config
+        run: |
+          git status
+          git config user.name "${{ github.actor }} via GitHub Actions"
+          git config user.email "${{ github.actor }}@github_actions.no_reply"
+
       - name: install deps
         run: pip install -r requirements.txt --break-system-packages
 
@@ -27,28 +33,10 @@ jobs:
         run: pretext --version
 
       - name: build deploy targets
-        run: |
-          version="$(pretext --version)"
-          major="$(echo $version | cut -d '.' -f 1)"
-          minor="$(echo $version | cut -d '.' -f 2)"
-          echo "PreTeXt Version:"
-          echo $version
-          echo $major
-          echo $minor
-          if [ "$major" -ge 2 -a "$minor" -ge 5 ]; then
-              echo "PreTeXt version is 2.5 or greater; using new build command"
-              pretext build --deploys
-          else
-              echo "PreTeXt version is less than 2.5, using old build command"
-              pretext build
-          fi
+        run: pretext build --deploys
 
-      - name: setup git config
-        run: |
-          # setup the username and email.
-          git config user.name ${{ github.actor }}
-          git config user.email ${{ github.actor }}@users.noreply.github.com
-          
-      - name: stage deployment
+      - name: run deploy
         run: pretext deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
