--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -3,11 +3,11 @@
 name: PreTeXt-CLI Actions
 on:
     # Runs on pull requests
-    pull_request:
-        branches: ["*"]
-    # Runs on pushes to main
-    push:
-        branches: ["main"]
+    # pull_request:
+    #     branches: ["*"]
+    # # Runs on pushes to main
+    # push:
+    #     branches: ["main"]
     # Runs on demand
     workflow_dispatch:
 
